<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="@layout/border2"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="170dp">


            <ImageView
                android:id="@+id/photoUrl"
                android:layout_width="76dp"
                android:layout_height="126dp"
                android:layout_margin="20dp"
                android:layout_marginStart="24dp"
                android:adjustViewBounds="true"
                android:background="@layout/border"
                android:contentDescription="@string/image"
                android:padding="4dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_popup_sync" />

            <TextView
                android:id="@+id/helpedby"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="24dp"
                android:paddingTop="5dp"
                android:text="@string/helpedby"
                android:textColor="#000000"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/photoUrl"
                app:layout_constraintTop_toTopOf="@+id/photoUrl" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/helpedby"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/helpedby"
                app:layout_constraintTop_toTopOf="@+id/photoUrl"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/helps"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="124dp"
                android:layout_marginTop="10dp"
                android:text="@string/helps"
                android:textColor="#000000"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/helpedby" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>