<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@layout/border2"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="580dp"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">


            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="96dp"
                android:background="@layout/border2"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/plantname"
                android:layout_width="185dp"
                android:layout_height="39dp"
                android:layout_marginBottom="20dp"
                android:background="@layout/border"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/category" />

            <EditText
                android:id="@+id/category"
                android:layout_width="184dp"
                android:layout_height="40dp"
                android:layout_marginBottom="244dp"
                android:autofillHints=""
                android:background="@layout/border"
                android:hint="category"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/save_button"
                app:layout_constraintEnd_toEndOf="@+id/descriptionDet"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tile"
                android:layout_width="136dp"
                android:layout_height="34dp"
                android:layout_margin="10dp"
                android:text="@string/enter_plants_details"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/plantname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.534"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.301" />

            <EditText
                android:id="@+id/descriptionDet"
                android:layout_width="291dp"
                android:layout_height="80dp"
                android:layout_marginBottom="28dp"
                android:autofillHints=""
                android:background="@layout/border"
                android:ems="10"
                android:hint="Comments(Production,symbiotic relationships...)"
                android:inputType="textLongMessage|textMultiLine|textPersonName|text"
                android:isScrollContainer="false"
                android:singleLine="false"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/save_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.514"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/conditions"
                android:layout_width="291dp"
                android:layout_height="80dp"
                android:background="@layout/border"
                android:hint="Environmental Conditions(water/soil/light...)"
                android:inputType="textLongMessage|textMultiLine|textPersonName|text"
                android:singleLine="false"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/descriptionDet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category"
                app:layout_constraintVertical_bias="0.52" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="87dp"
                android:layout_height="100dp"
                android:background="@layout/border"
                android:contentDescription="@string/todo"
                android:padding="5dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="@+id/category"
                app:layout_constraintEnd_toStartOf="@+id/plantname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/plantname"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/add_btn" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>